# mountain-bike-jump-time

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/mountain_bike_jump_time/: __init__.py  env.py  rollout.py  train_ppo.py  visualization.py
src/mountain_bike_jump_time/example/: ope_ips.py
tests/: test_env.py  test_random_rollout.py  test_rollout.py  test_train_ppo.py
