[tool.poetry]
name = "mountain-bike-jump-time"
version = "0.1.0"
description = "A toy Farama Gymnasium environment for OPE evaluation: stochastic jump timing problem."
authors = ["airboxlab"]
readme = "README.md"
license = "MIT"
packages = [{ include = "mountain_bike_jump_time", from = "src" }]

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^1.0.0"
numpy = "^2.1"
pandas = "^2.2"
matplotlib = "^3.9"
pygame = "^2.6"
ray = { version = "2.53.0", extras = ["default", "rllib"] }
torch = { version = "2.8.0", source = "pytorch-cpu" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
